fix z-index 404 error

--- a/src/components/not-found/NotFound.scss
+++ b/src/components/not-found/NotFound.scss
@@ -3,7 +3,6 @@ $c-2: lighten($c-1, 3%);
 
 .NotFound {
   .main {
-    z-index: 5;
     position: absolute;
     width: 30%;
     left: 35%;
